# pyjpeg

./: README.md  analyze  analyze.py  arithmetic.py  generate-baseline.py  generate.py  huffman.py  jpeg  jpeg.py  jpg2pnm.py  pgm.py  pnm.py  pyproject.toml  tables.py
generate/: 10x10x8_grayscale.pgm  11x11x8_grayscale.pgm  15x15x8_grayscale.pgm  32x32x16_rgb.ppm  4x4x8_grayscale.pgm  8x8x8_grayscale.pgm  9x9x8_grayscale.pgm  analyze.py  app.py  arithmetic.py  arithmetic_dct_ac_successive_scan.py  arithmetic_dct_dc_successive_scan.py  arithmetic_dct_scan.py  arithmetic_lossless_scan.py  arithmetic_scan.py  arithmetic_scan_encoder.py  com.py  dac.py  dct.py  dht.py  dnl.py  dqt.py  dri.py  eoi.py  exp.py  generate-baseline.py  generate.py  huffman.py  huffman_dct_ac_successive_scan.py  huffman_dct_scan.py  huffman_lossless_scan.py  huffman_scan_encoder.py  jpeg.py  jpeg_arithmetic_scan.py  jpeg_dct.py  jpeg_decoder.py  jpeg_encoder.py  jpeg_lossless.py  jpeg_marker.py  jpeg_segments.py  (+7 more)
src/: analyze.py  jpeg_decoder.py  jpeg_encoder.py  jpg2pnm.py  pgm.py  pnm.py
tests/: test_app.py  test_arithmetic_dct_ac_successive_scan.py  test_arithmetic_dct_dc_successive_scan.py  test_arithmetic_dct_scan.py  test_arithmetic_lossless_scan.py  test_arithmetic_scan.py  test_artithmetic.py  test_com.py  test_dac.py  test_dct.py  test_decode_suite.py  test_dht.py  test_dnl.py  test_dqt.py  test_dri.py  test_eoi.py  test_exp.py  test_golomb_scan.py  test_huffman.py  test_huffman_dct_ac_successive_scan.py  test_huffman_dct_dc_successive_scan.py  test_huffman_dct_scan.py  test_image.py  (+10 more)
(+157 files in other folders)
