[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pyjpeg"
version = "0.2"
authors = [
  { name="Robert Ancell", email="robert.ancell@gmail.com" },
]
description = "Pure Python JPEG image encoder/decoder"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
license = "LGPL-3.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/robert-ancell/pyjpeg"
Issues = "https://github.com/robert-ancell/pyjpeg/issues"
